# GaWF_RNN

./: .gitignore  AGENT.md  AGENTS.md  MODIFICATIONS.md  README.md  VISUALIZATION_GUIDE.md  _train_ffn.py  _train_rnn_original.py  _train_rnn_original_improved.py  analysis_main_pytorch.md  analyze_cnn_channel_activation.py  analyze_hparam_results.py  batch_visualize.sh  diagnose_training_config.py  env.yml  env_amarel.yml  environment.yml  environment_full.yml  environment_osx_arm64.yml  export_gawf_gates.py  export_gawf_sector_basis.py  gate_similarity_embedding.py  gawf_gates.pt  hparam_search.sh  hparam_search_guide.md  main_pytorch.py  opt.py  plot_generalization.py  pyproject.toml  run_hparam_search.sh  train_atari.py  train_atari_dqn.py  train_imdb.py  train_minigrid_dqn.py  train_minigrid_ppo.py  train_minigrid_ppo_paper.py  train_minigrid_ppo_paper_align.py  train_model.py  train_rnn.py  train_rnn_sector_original.py  (+10 more)
.agents/: local.example.md
anal_utils/: analyze_cnn_channel_activation.py  cnn_channel_stats.py  export_V_basis.py  export_gate_avg.py  export_gate_sample.py  export_gawf_sector_basis.py  export_whh.py  hidden_unit_tuning.py  mnist_embedding.py  model_param_counts.py  pkl_to_metrics_json.py  print_model_param_counts.py
archive/: visualize_batch.sh
cnn_channel_activation_data/: cnn_channel_activation_stats.npz
dashboard/: .gitignore  README.md  __init__.py  collector.py  install_launch_agent.py  manage_tasks.py  server.py  tasks.json  tracker_core.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEVELOPMENT_WORKFLOWS.md  EXPERIMENT_LOG.md  HPARAM_SEARCH_MODES.md  MODEL_FILES_EXPLAINED.md  TRAINING_VERSIONS_COMPARISON.md  further_optimization.md  hparam_search_guide.md  overfitting_analysis.md  underfitting_solution.md
environments/: README.md  aim3_rnn-linux-cuda.yml  aim3_rnn-macos.yml  install_linux_cuda_extras.sh
experiments/: README.md
gawf_sector_basis_exports/: digit_0_basis.pt  digit_1_basis.pt  digit_2_basis.pt  digit_3_basis.pt  digit_4_basis.pt  digit_5_basis.pt  digit_6_basis.pt  digit_7_basis.pt  digit_8_basis.pt  digit_9_basis.pt  sector_0_basis.pt  sector_4_basis.pt  sector_5_basis.pt  sector_8_basis.pt
notebooks/: RecurrentNetwork.ipynb
remote/: README.md  config.example.sh  fetch_results.sh  lib.sh  run.sh  sync_code.sh
scripts/: prepare_imdb_data.py  prepare_sentihood_data.py
source/: GenerateMovies.py  GenerateMovies_cplx.py  GenerateMovies_joint_balanced.py
tests/: test_amarel_submit_safety.py  test_anal_index.py  test_anal_paths.py  test_atari_dqn_checkpoint.py  test_atari_dqn_smoke.py  test_atari_learning_curves_smoke.py  test_atari_model_smoke.py  test_atari_replay_smoke.py  test_atari_train_utils_smoke.py  test_chan_num.py  test_clutter_best6_multiseed.py  test_clutter_checkpoint.py  test_clutter_data_pipeline.py  test_convert_float32_to_uint8.py  test_dashboard_manage_tasks.py  test_dashboard_tracker.py  test_experiment_monitoring.py  test_export_unified_variance_sources.py  test_fg_switch_offset_acc.py  test_gawf_gate_context_specificity_viz.py  test_gawf_gate_group_delta.py  test_gawf_gate_histogram_summary.py  test_gawf_gate_robustness.py  test_gawf_recurrent_sector_relevance_distributions.py  test_gawf_symmetric_relevance_timing_viz.py  test_gawf_symmetric_stats.py  (+16 more)
(+413 files in other folders)
